# mkt-intel-agent

./: .gitignore  CLAUDE.md  README.md  langgraph-dev-guide.md  pyproject.toml
.claude/summary/: 1_summary.md  2_summary.md
data-process/: data-to-db.py
data-process/data/: data_db.json  table-describe.md
data-process/scripts/: data-to-db.py
doc-process/: reducto-learnings.md
doc-process/results/chunk-form/: c-CO_and_Greenhouse_Gas_Emissions_-_Our_World_in_Data.json  c-CO_emissions_by_fuel_-_Our_World_in_Data.json
doc-process/results/raw-form/: CO_and_Greenhouse_Gas_Emissions_-_Our_World_in_Data.json  CO_emissions_by_fuel_-_Our_World_in_Data.json  parsed_result.json
doc-process/scripts/: doc-to-lance.py  process-doc.py
search-agent/: README.md  agent.py  langgraph.json
