[project]
name = "mkt-intel-agent"
version = "0.1.0"
description = "Market Intelligence Agent"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.3",
    "reductoai>=0.12.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
